--- a/src/app/components/dialog/dialog.component.html
+++ b/src/app/components/dialog/dialog.component.html
@@ -8,6 +8,10 @@
   {{ message }}
 </div>
 <div class="modal-footer">
-  <button type="button" class="btn btn-danger" (click)="decline()">{{ btnCancelText }}</button>
-  <button type="button" class="btn btn-primary" (click)="accept()">{{ btnOkText }}</button>
+  <button type="button" class="btn btn-danger" (click)="decline()">
+    <span class="fa fa-ban"></span>  {{ btnCancelText }}
+  </button>
+  <button type="button" class="btn btn-primary" (click)="accept()">
+    <span class="fa fa-check"></span> {{ btnOkText }}
+  </button>
 </div>
