--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -1,6 +1,6 @@
-<app-products-nav-bar (productEventEmitter)="onActionEvent($event)"></app-products-nav-bar>
+<app-products-nav-bar></app-products-nav-bar>
+<app-products-list [productsInput$]="products$" ></app-products-list>
 
-<app-products-list [productsInput$]="products$" (productsEventEmitter)="onActionEvent($event)" ></app-products-list>
-
+<!--app-products-list [productsInput$]="products$" (productsEventEmitter)="onActionEvent($event)" ></app-products-list>-->
 
 
